--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "jest": "^24.8.0",
         "rollup": "^1.17.0",
         "rollup-plugin-babel": "^4.3.3",
-        "rollup-plugin-node-resolve": "^5.2.0"
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-terser": "^5.1.1"
     },
     "scripts": {
         "test": "jest",
